k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
  labels:
    app: guess-that-track
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: guess-that-track
    component: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
